[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lmms-mcp"
version = "0.1.0"
authors = [
  { name = "akidry" },
]
description = "LMMS Model Context Protocol Integration"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "python-osc>=1.8.0",
    "websocket-client>=1.3.3",
    "python-socketio>=5.7.2",
]

[project.scripts]
lmms-mcp = "lmms_mcp.server:main"

[project.urls]
"Homepage" = "https://github.com/akidry/lmms-mcp-integration"
"Bug Tracker" = "https://github.com/akidry/lmms-mcp-integration/issues"
